# actor_cpp

./: CMakeLists.txt  README.md
src/: abstract_actor.hpp  actor_system.hpp  scheduler.cpp  scheduler.hpp
src/util/: callable.hpp  thread_pool.cpp  thread_pool.hpp  threadsafe_list.hpp  threadsafe_queue.cpp  threadsafe_queue.hpp
test/: CMakeLists.txt  test_actor.cpp  test_actor_system.cpp  test_fixtures.hpp  test_thread_pool.cpp  test_threadsafe_queue.cpp
